--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             margin-bottom: 20px;
         }
 
-        .header img.logo { /* نمط لشعار الأكاديمية */
+        .header img.logo { /* نمط لشعار الأكاديمية العلوي */
             max-width: 200px;
             height: auto;
             margin-bottom: 15px;
@@ -390,7 +390,7 @@
                 <p class="subtitle">اختبر معلوماتك حول قوة كلمات المرور وكيفية إنشائها</p>
             </div>
 
-            <img src="https://cdn-icons-png.flaticon.com/512/565/565507.png" alt="رمز يمثل قفل وكلمة مرور" class="main-img animate__animated animate__pulse animate__infinite">
+            <img src="https://cdn-icons-png.flaticon.com/512/3048/3048574.png" alt="رمز يمثل قفل ومفتاح" class="main-img animate__animated animate__pulse animate__infinite">
 
             <div class="input-group">
                 <div class="input-container">
